Bug 1713410 - Use a wider integer in resampling segment calculation, to avoid overflow. r=alwu

I caught this locally on Android, c.mDuration was 104517 (which is more than two
seconds at the rate it was), it was overflowing uint32_t because we want to do
this in integers so the multiplication is big.  The alternative is to make the
computation in floating point, rounding up so that there's enough space in the
buffer.

Now I wonder why we have such a big segment sometimes, and only on some OSes, but
we can investigate this later.

Differential Revision: https://phabricator.services.mozilla.com/D138303